@startuml

abstract class AbstractName {
# name : string

+ {abstract} GetFullName() : string
}

AbstractName <|-- RussianName
class RussianName {
- family : string
- patronymic : string

+ RussianName(family : string, name : string, patronymic : string)

+ GetFullName() : string
}

AbstractName <|-- EuropeName
class EuropeName {
- second_name : string
- last_name : string

+ EuropeName(first_name : string, second_name : string, last_name : string)

+ GetFullName() : string
}

class Phone {
- country : int
- operator : int
- number : int

+ Phone(country : int, operator : int, number : int)

+ ToString() : string
}

AbstractName <--* Person
Phone <--* Person
class Person {
- name : AbstractName
- phone : Phone

+ Person(name : AbstractName, phone : Phone)

+ ToString() : string
}

@enduml